--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'German fiction -- Translations into English'
+- GITenberg
 title: 'Castle Hohenwald: A Romance'
 url: http://www.gutenberg.org/ebooks/34892
